removed log line
git-svn-id: http://chianti.ucsd.edu/svn@20135 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/cytoscapeweb/html-template/sample.html
+++ b/cytoscapeweb/trunk/cytoscapeweb/html-template/sample.html
@@ -111,7 +111,7 @@
 
                 vis.ready(function() {
                     showElapsedTime();
-                    var layout = vis.layout(); console.log(layout);
+                    var layout = vis.layout();
                     $("#layouts").val(layout.name);
                     $("input, select").attr("disabled", false);
                     $("#updateVisualStyle").attr("disabled", true);
