Fixed news section.  Tumbler feed is now using iframe.
git-svn-id: http://chianti.ucsd.edu/svn@20465 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/index.html
+++ b/new_cytoscape_website/trunk/index.html
@@ -98,10 +98,10 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       
       <!-- News -->
       <div class="news">
-        <h3>Latest News &nbsp; &nbsp;<a href="http://cytoscape.tumblr.com/"><img src="images/icon/tumblr.png"/></a></h3>
-        <script type="text/javascript" src="http://cytoscape.tumblr.com/api/read/json"></script> 
-        <script type="text/javascript" src="js/tumblr_feed.js"></script>
+      <iframe id="frame" src="news.html" height="545" width="428" frameborder="0" scrolling="auto">
+      </iframe>
       </div>
+      
       <div class="startnav">
         <h2>Where to Start?</h2>
         <div class="guide">
