Maital's photo and affiliation
git-svn-id: http://chianti.ucsd.edu/svn@20475 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/development_team.html
+++ b/new_cytoscape_website/trunk/development_team.html
@@ -130,7 +130,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <div class="person"> <a href="#"><img src="images/people/piet.jpg"></img>
           <div class="name">Piet Molenaar</div>
           </a></div>
-        <div class="person"> <a href="#"><img src="images/people/NO_PHOTO_YET.jpg"></img>
+        <div class="person"> <a href="http://www.evogene.com/"><img src="images/people/maital.jpg"></img>
           <div class="name">Maital Ashkenazi</div>
           </a></div>
         <div class="person"> <a href="#"><img src="images/people/NO_PHOTO_YET.jpg"></img>
