git-svn-id: http://chianti.ucsd.edu/svn@20574 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/cytoscapeweb/html-template/performance.html
+++ b/cytoscapeweb/trunk/cytoscapeweb/html-template/performance.html
@@ -16,7 +16,7 @@
             var layouts = [ { name: "Circle" }, 
                             { name: "Radial" }, 
                             { name: "Tree" }, 
-                            { name: "ForceDirected", options: { maxTime: 300000, autoStabilize: false } }
+                            { name: "ForceDirected", options: { maxTime: 300000 } }
                           ];
             
             var tests = [ { file: 'pt1.graphml', nodes: 50,  edges: 100 }, 
