Fixed null pointer exception Added drag control to nodes
git-svn-id: http://chianti.ucsd.edu/svn@21506 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/branches/gsoc2010/gbeb/html-template/index.template.html
+++ b/cytoscapeweb/branches/gsoc2010/gbeb/html-template/index.template.html
@@ -114,7 +114,8 @@
                 $("#bundleEdges").change(function(evt) {
                     swf().bundleEdges($("#bundleEdges").is(":checked"));
                 });
-                
+
+                $("#bundleEdges").attr("checked", false);
                 draw($("#graphs").val());
             });
         --></script>
