git-svn-id: http://chianti.ucsd.edu/svn@21653 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/cytoscapeweb/html-template/sample.html
+++ b/cytoscapeweb/trunk/cytoscapeweb/html-template/sample.html
@@ -69,7 +69,7 @@
                     	layout = { name: "Preset", options: { fitToScreen: true } };
                     } else { // GraphML or SIF
                     	if ($("#layouts").val() !== "Preset") {
-                            layout = { name: $("#layouts").val(), options: { weightAttr: "weight", weightNorm: "inverselinear", restLength: 50, autoStabilize: false } };
+                            layout = { name: $("#layouts").val(), options: { weightAttr: "weight", weightNorm: "linear", restLength: 50, autoStabilize: false } };
                         }
 					}
 
