Fixed bug #2329: Grabber hand cursor gets stuck: Removed Ctrl-key shortcut and added an experimental mousedown timer that will automatically change Cytoscape Web to grab-to-pan mode when user clicks and holds for a while. Some other edge-weighted force directed layout changes.
git-svn-id: http://chianti.ucsd.edu/svn@21671 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/cytoscapeweb/html-template/sample.html
+++ b/cytoscapeweb/trunk/cytoscapeweb/html-template/sample.html
@@ -20,6 +20,7 @@
                 edgeTooltipsEnabled: true,
                 nodeTooltipsEnabled: true,
                 edgesMerged: false,
+                //mouseDownToDragDelay: -1,
                 visualStyle: {
                     global: {
                         backgroundColor: "#fefefe",
