Updated based on Trey's requests.
git-svn-id: http://chianti.ucsd.edu/svn@21785 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/development_team.html
+++ b/new_cytoscape_website/trunk/development_team.html
@@ -17,24 +17,22 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <div class="blockfull">
       <h1>Cytoscape Consortium</h1>
       <div class="column">
-        <div class="institute"><a href=""><img src="images/logo/agilent_logo_web.png" /></a></div>
-        <div class="institute"><a href=""><img src="images/logo/isb_logo_web.png" /></a></div>
-        <div class="institute"><a href=""><img src="images/logo/unilever_logo_web.png" /></a></div>
+        <div class="institute"><a href="http://www.home.agilent.com"><img src="images/logo/agilent_logo_web.png" /></a></div>
+        <div class="institute"><a href="http://www.utoronto.ca/"><img src="images/logo/toronto_logo_web.png" /></a></div>
       </div>
       <div class="column">
-        <div class="institute"><a href=""><img src="images/logo/ucsf_logo_web.png" /></a></div>
-        <div class="institute"><a href=""><img src="images/logo/pasteur_logo_web.png" /></a></div>
-        <div class="institute"><a href=""><img src="images/logo/toronto_logo_web.png" /></a></div>
+        <div class="institute"><a href="http://www.ucsf.edu/"><img src="images/logo/ucsf_logo_web.png" /></a></div>
+        <div class="institute"><a href="http://www.pasteur.fr"><img src="images/logo/pasteur_logo_web.png" /></a></div>
+        <div class="institute"><a href="http://www.mskcc.org"><img src="images/logo/mskcc_logo_web.png" /></a></div>
       </div>
       <div class="column">
-        <div class="institute"><a href=""><img src="images/logo/ucsd_logo_web.png" /></a></div>
-        <div class="institute"><a href=""><img src="images/logo/ncibi_logo_web.png" /></a></div>
-        <div class="institute"><a href=""><img src="images/logo/mskcc_logo_web.png" /></a></div>
+        <div class="institute"><a href="http://www.ucsd.edu/"><img src="images/logo/ucsd_logo_web.png" /></a></div>
+        <div class="institute"><a href="http://www.systemsbiology.org/"><img src="images/logo/isb_logo_web.png" /></a></div>
       </div>
     </div>
     <div class="blockfull">
       <h1>Board of Directors</h1>
-      <div class="person"> <a href="http://chianti.ucsd.edu/idekerlab/"> <img src="images/people/trey.jpg"></img>
+      <div class="person"> <a href="http://chianti.ucsd.edu/idekerlab/pages/ideker.html"> <img src="images/people/trey.png"></img>
         <div class="name">Trey Ideker</div>
         </a> </div>
       <div class="person"> <a href="http://cbio.mskcc.org/people/info/chris_sander.html"><img src="images/people/chris_s.jpg"></img>
@@ -47,10 +45,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       <div class="person"><a href="http://www.pasteur.fr/recherche/unites/Biolsys/benno/"><img src="images/people/benno.jpg"></img>
         <div class="name">Benno Schwikowski</div>
         </a></div>
-      <div class="person"><a href="http://www.unilever.com/"><img src="images/people/yeyejide.jpg"></img>
-        <div class="name">Yeyejide Adeleye</div>
-        </a></div>
-      <div class="person"><a href="http://www.agilent.com/labs/research/mtl/projects/sysbio.html"><img src="images/people/annette.jpg"></img>
+      <div class="person"><a href="http://www.home.agilent.com"><img src="images/people/annette.jpg"></img>
         <div class="name">Annette Adler</div>
         </a> </div>
       <div class="person"><a href="http://baderlab.org/"><img src="images/people/gary.jpg"></img>
@@ -62,7 +57,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       <div class="person"><a href="http://www.systemsbiology.org/Scientists_and_Research/Faculty_Groups/Shmulevich_Group"><img src="images/people/ilya.jpg"></img>
         <div class="name">Ilya Schmulevich</div>
         </a> </div>
-      <div class="person"><a href="http://www.systemsbiology.org/"><img src="images/people/NO_PHOTO_YET.jpg"></img>
+      <div class="person"><a href=""><img src="images/people/NO_PHOTO_YET.jpg"></img>
         <div class="name">Louis Coffman</div>
         </a> </div>
     </div>
@@ -123,10 +118,16 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
           </a></div>
       </div>
       <div class="group">
-        <h3>Other Institutes</h3>
-        <div class="person"> <a href="#"><img src="images/people/mathieu.jpg"></img>
-          <div class="name">Mathieu Michaud</div>
+        <h3>University of Toronto (Ontario, Canada)</h3>
+        <div class="person"> <a href="http://baderlab.org/"><img src="images/people/jm1.jpg"></img>
+          <div class="name">Jason Montojo</div>
           </a></div>
+        <div class="person"> <a href="http://baderlab.org/"><img src="images/people/NO_PHOTO_YET.jpg"></img>
+          <div class="name"></div>
+          </a></div>
+      </div>
+      <div class="group">
+        <h3>Other Institutes</h3>
         <div class="person"> <a href="#"><img src="images/people/piet.jpg"></img>
           <div class="name">Piet Molenaar</div>
           </a></div>
@@ -159,7 +160,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       </ul>
     </div>
     <div class="blockfull">
-      <h2>Past Developers and Directors</h2>
+      <h2>Past Developers, Directors, and Funding Agencies</h2>
       <ul>
         <li>Chris Workman</li>
         <li>Aditya Vailaya</li>
@@ -178,6 +179,9 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <li>Paul Shannon</li>
         <li>Jonathan Wang</li>
         <li>Robert Sheridan</li>
+        <li>Yeyejide Adeleye</li>
+        <li>Mathieu Michaud</li>
+        <li>
       </ul>
     </div>
   </div>
