--- a/new_cytoscape_website/trunk/news.html
+++ b/new_cytoscape_website/trunk/news.html
@@ -26,15 +26,23 @@ body {
 	padding:2px 15px;
 	background:#999;
 }
-
-
 </style>
 </head>
 <body>
 <div class="frame">
-  <h3>Latest News &nbsp; &nbsp;<a href="http://cytoscape.tumblr.com/" target="_top"><img src="images/icon/tumblr.png"/></a></h3>
+
+  <h3>Featured Cytoscape News &nbsp;<a href="http://cytoscape.tumblr.com/" target="_top"><img src="images/icon/tumblr.png"/></a></h3>
+
   <script type="text/javascript" src="http://cytoscape.tumblr.com/api/read/json"></script> 
   <script type="text/javascript" src="js/tumblr_feed.js"></script> 
+</div>
+
+<div class="feed">
+  <h2>Aggregated News Feed by <a href="http://friendfeed.com/cytoscape">FriendFeed</a></h2>
+  <script type="text/javascript" src="http://friendfeed.com/embed/widget/cytoscape?v=3&amp;num=10&amp;hide_logo=1&amp;width=280"></script>
+  <noscript>
+  <a href="http://friendfeed.com/cytoscape"><img alt="View my FriendFeed" style="border:none;" src="http://friendfeed.com/embed/widget/cytoscape?v=3&amp;num=10&amp;hide_logo=1&amp;width=900&amp;format=png"/></a>
+  </noscript>
 </div>
 </body>
 </html>
