Gary's pictrure had been updated.
git-svn-id: http://chianti.ucsd.edu/svn@21786 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/development_team.html
+++ b/new_cytoscape_website/trunk/development_team.html
@@ -48,7 +48,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       <div class="person"><a href="http://www.home.agilent.com"><img src="images/people/annette.jpg"></img>
         <div class="name">Annette Adler</div>
         </a> </div>
-      <div class="person"><a href="http://baderlab.org/"><img src="images/people/gary.jpg"></img>
+      <div class="person"><a href="http://baderlab.org/"><img src="images/people/gary.png"></img>
         <div class="name">Gary Bader</div>
         </a> </div>
       <div class="person"><a href="http://www.genmapp.org/"><img src="images/people/bruce.jpg"></img>
