Biology section modified.
git-svn-id: http://chianti.ucsd.edu/svn@21787 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/index.html
+++ b/new_cytoscape_website/trunk/index.html
@@ -160,9 +160,10 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
           <div>
             <p>Cytoscape was developed for biological researches, and it supports a lot of usecases including:</p>
             <ul>
-              <li>Load Protein-Protein interaction data sets in various formats</li>
+              <li>Load protein-protein interaction data sets in various formats</li>
               <li>Integrate annotation data, such as Gene Ontology, to the network</li>
-              <li>Analyze your network with plugins</li>
+              <li>Analyze protein-protein/genetic interaction network with plugins</li>
+              <li>Map experimental data (e.g. microarray) to your network data sets and visualize it</li>
               <li>Visualize and analyze human-curated pathway datasets such as KEGG.</li>
             </ul>
             
