"Release candidate" version of new web site.  Top page layout is modified to save some space.
git-svn-id: http://chianti.ucsd.edu/svn@21823 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/development_team.html
+++ b/new_cytoscape_website/trunk/development_team.html
@@ -15,7 +15,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script src="js/header.js"></script>
   <div id="people">
     <div class="blockfull">
-      <h1>Cytoscape Consortium</h1>
+      <h1>Cytoscape Consortium and Funding Agencies</h1>
       <div class="column">
         <div class="institute"><a href="http://www.home.agilent.com"><img src="images/logo/agilent_logo_web.png" /></a></div>
         <div class="institute"><a href="http://www.utoronto.ca/"><img src="images/logo/toronto_logo_web.png" /></a></div>
@@ -51,14 +51,14 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       <div class="person"><a href="http://baderlab.org/"><img src="images/people/gary.png"></img>
         <div class="name">Gary Bader</div>
         </a> </div>
+      <div class="person"> <a href="http://www.ucsf.edu/"> <img src="images/people/alex.jpg"></img>
+          <div class="name">Alex Pico</div>
+          </a> </div>
       <div class="person"><a href="http://www.genmapp.org/"><img src="images/people/bruce.jpg"></img>
         <div class="name">Bruce Conklin</div>
         </a> </div>
       <div class="person"><a href="http://www.systemsbiology.org/Scientists_and_Research/Faculty_Groups/Shmulevich_Group"><img src="images/people/ilya.jpg"></img>
         <div class="name">Ilya Schmulevich</div>
-        </a> </div>
-      <div class="person"><a href=""><img src="images/people/NO_PHOTO_YET.jpg"></img>
-        <div class="name">Louis Coffman</div>
         </a> </div>
     </div>
     <div class="blockfull">
@@ -80,9 +80,6 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       </div>
       <div class="group">
         <h3>UC, San Francisco (California, USA)</h3>
-        <div class="person"> <a href="http://www.ucsf.edu/"> <img src="images/people/alex.jpg"></img>
-          <div class="name">Alex Pico</div>
-          </a> </div>
         <div class="person"> <a href="http://www.ucsf.edu/"><img src="images/people/kristina.jpg"></img>
           <div class="name">Kristina Hanspers</div>
           </a></div>
