--- a/new_cytoscape_website/trunk/plugin_submit.html
+++ b/new_cytoscape_website/trunk/plugin_submit.html
@@ -19,16 +19,16 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <div id="documents">
     <div class="blockfull">
       <h1>Choose Your Plugin File Type</h1>
-      <div class="filetype"> <a href="pluginsubmit.php"><img src="images/icon/File-jar-128.png" /></a>
+      <div class="filetype"> <a href="http://chianti.ucsd.edu/cyto_web/plugins_new/pluginsubmit.php"><img src="images/icon/File-jar-128.png" /></a>
         <h3>JAR File</h3>
         <p>A single <a href="http://www.cytoscape.org/cgi-bin/moin.cgi/Cytoscape_Plugin_Tutorial"> properly formatted plugin jar</a>. We will read (and validate) the plugin metadata (name, description, version, etc.) from the jar.</p>
       </div>
-      <div class="filetype"> <a href="pluginsubmitzip.php"><img src="images/icon/Zip-gold-blue-128.png"/></a>
+      <div class="filetype"> <a href="http://chianti.ucsd.edu/cyto_web/plugins_new/pluginsubmitzip.php"><img src="images/icon/Zip-gold-blue-128.png"/></a>
         <h3>ZIP File</h3>
         <p>A file with extension .zip, which should contain the plugin jar and any other necessary data.  The file will be loaded as is and you will need to enter the plugin metadata.</p>
       </div>
       
-      <div class="filetype"><a href="pluginsubmiturl.php"><img src="images/icon/Global-network-128.png" /></a>
+      <div class="filetype"><a href="http://chianti.ucsd.edu/cyto_web/plugins_new/pluginsubmiturl.php"><img src="images/icon/Global-network-128.png" /></a>
       <h3>URL</h3>
       <p>Plugin information with project URL. Since Cytoscape does not host the Zip/Jar file, they will not appear at the Cytoscape plugin manager. Users should download them manualy by following the project URLs, if they are interested. </p>
        </div>
