Unilever had been added to past funding agencies.
git-svn-id: http://chianti.ucsd.edu/svn@21837 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/development_team.html
+++ b/new_cytoscape_website/trunk/development_team.html
@@ -178,7 +178,8 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <li>Robert Sheridan</li>
         <li>Yeyejide Adeleye</li>
         <li>Mathieu Michaud</li>
-        <li>
+        
+        <li>Unilever</li>
       </ul>
     </div>
   </div>
