--- a/new_cytoscape_website/trunk/tumblr.html
+++ b/new_cytoscape_website/trunk/tumblr.html
@@ -2,16 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="http://chianti.ucsd.edu/~kono/cytoscape/css/main.css" type="text/css" rel="stylesheet" media="screen">
+<link href="http://www.cytoscape.org/css/main.css" type="text/css" rel="stylesheet" media="screen">
 <title>Latest News</title>
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript">google.load("jquery", "1.3");</script>
-<script type="text/javascript" src="http://chianti.ucsd.edu/~kono/cytoscape/js/menu_generator.js"></script>
+<script type="text/javascript" src="http://www.cytoscape.org/js/menu_generator.js"></script>
 </head>
 
 <body>
 <div id="container"> 
-  <script src="http://chianti.ucsd.edu/~kono/cytoscape/js/header.js"></script>
+  <script src="http://www.cytoscape.org/js/header.js"></script>
   <div id="tumblr">
     <ul id="posts">
       {block:Posts}
@@ -49,7 +49,7 @@
       {/block:Posts}
     </ul>
   </div>
-  <script src="http://chianti.ucsd.edu/~kono/cytoscape/js/footer.js"></script> 
+  <script src="http://www.cytoscape.org/js/footer.js"></script> 
 </div>
 </body>
 </html>
