Links are updated for new plugin web site.
git-svn-id: http://chianti.ucsd.edu/svn@21853 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/development_team.html
+++ b/new_cytoscape_website/trunk/development_team.html
@@ -116,11 +116,14 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       </div>
       <div class="group">
         <h3>University of Toronto (Ontario, Canada)</h3>
-        <div class="person"> <a href="http://baderlab.org/"><img src="images/people/jm1.jpg"></img>
+        <div class="person"><a href="http://baderlab.org/"><img src="images/people/jm1.jpg"></img>
           <div class="name">Jason Montojo</div>
           </a></div>
-        <div class="person"> <a href="http://baderlab.org/"><img src="images/people/NO_PHOTO_YET.jpg"></img>
-          <div class="name"></div>
+        <div class="person"><a href="http://baderlab.org/"><img src="images/people/clopes.jpg"></img>
+          <div class="name">Christian Lopes</div>
+          </a></div>
+        <div class="person"><a href="http://baderlab.org/IgorRodchenkov"><img src="images/people/igor.png"></img>
+          <div class="name">Igor Rodchenkov</div>
           </a></div>
       </div>
       <div class="group">
@@ -178,9 +181,12 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <li>Robert Sheridan</li>
         <li>Yeyejide Adeleye</li>
         <li>Mathieu Michaud</li>
-        
-        <li>Unilever</li>
       </ul>
+      <p>
+      <ul>
+      	<li>Unilever</li>
+      </ul>
+      </p>
     </div>
   </div>
   <script src="js/footer.js"></script> 
