--- a/new_cytoscape_website/trunk/download.html
+++ b/new_cytoscape_website/trunk/download.html
@@ -30,8 +30,9 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <div id="container"> 
   <script src="js/header.js"></script>
   <div id="titleimage"> <img src="images/icon/Downloads-128.png" />
-    <h1>Download Cytoscape <script>document.write(cytoscapeVersion)</script></h1>
+    <h1>Download Cytoscape</h1>
   </div>
+  
   <div id="downleft" class="blockleft">
     <h2>License Agreement</h2>
     <p> Cytoscape is available as a platform-independent open-source Java application, released under the
@@ -50,10 +51,7 @@ CYTOSCAPE LICENSE AGREEMENT
 GNU LESSER GENERAL PUBLIC LICENSE
 Version 2.1, February 1999
 
- Copyright (C) 1991, 1999 Free Software Foundation, Inc.
-     59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- Everyone is permitted to copy and distribute verbatim copies
- of this license document, but changing it is not allowed.
+ Copyright (C) 1991, 1999 Free Software Foundation, Inc.  59 Temple Place, Suite 330, Boston, MA  02111-1307  USA  Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
 
 [This is the first released version of the Lesser GPL.  It also counts
  as the successor of the GNU Library Public License, version 2, hence
@@ -520,9 +518,7 @@ DAMAGES.
         <label> <span>Email address : </span>
           <input value=""  class="validate[required,custom[email]] text-input" type="text" name="email" id="email"  />
         </label>
-        <label> <span>Confirm email address : </span>
-          <input value="" class="validate[required,confirm[email]] text-input" type="text" name="email2"  id="email2" />
-        </label>
+        
       </fieldset>
       <fieldset>
         <legend>Conditions</legend>
