--- a/new_cytoscape_website/trunk/index.html
+++ b/new_cytoscape_website/trunk/index.html
@@ -112,7 +112,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
       </div>
       <div class="introbox">
         <h3>Network Data Integration, Analysis, and Visualization in a Box</h3>
-        <p> Cytoscape is an open source software platform for visualizing complex-networks and integrating these with any type of attribute data.  A lot of <a href="plugins.html">plugins</a> are available for various kinds of problem domains, including bioinformatics, social network analysis, and semantic web. </p>
+        <p> Cytoscape is an open source software platform for visualizing <a href="http://en.wikipedia.org/wiki/Complex_network">complex-networks</a> and integrating these with any type of attribute data.  A lot of <a href="http://chianti.ucsd.edu/cyto_web/plugins/">plugins</a> are available for various kinds of problem domains, including bioinformatics, social network analysis, and semantic web. </p>
         
         <a href="download.html">
         	<button class="button medium blue">Download Cytoscape Now</button>
@@ -167,7 +167,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
                   interaction data sets</a> in <a href="http://cytoscape.org/manual/Cytoscape2_7Manual.html#Supported%20Network%20File%20Formats">many formats</a></li>
                   <li>Project and integrate global datasets and functional annotations</li>
                   <li>Establish powerful visual mappings across these data</li>
-                  <li>Perform advanced analysis and modeling using <a href="http://chianti.ucsd.edu/cyto_web/plugins_new/">Cytoscape plugins</a></li>
+                  <li>Perform advanced analysis and modeling using <a href="http://chianti.ucsd.edu/cyto_web/plugins/">Cytoscape plugins</a></li>
                   <li>Visualize and analyze human-curated pathway datasets such as 
                   <a href="http://www.reactome.org/">Reactome</a> or <a href="http://www.genome.jp/kegg/pathway.html">KEGG</a>.</li>
                 </ul>
