Fixed my misspelled last name.
git-svn-id: http://chianti.ucsd.edu/svn@22124 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/development_team.html
+++ b/new_cytoscape_website/trunk/development_team.html
@@ -75,7 +75,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
           <div class="name">Peng-Liang Wang</div>
           </a></div>
         <div class="person"><a href="http://chianti.ucsd.edu/idekerlab/"><img src="images/people/NO_PHOTO_YET.jpg"></img>
-          <div class="name">Johannes Rushcheinski</div>
+          <div class="name">Johannes Ruscheinski</div>
           </a></div>
       </div>
       <div class="group">
