Link to beta and older versions had been added to Download menu.
git-svn-id: http://chianti.ucsd.edu/svn@22227 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/download.html
+++ b/new_cytoscape_website/trunk/download.html
@@ -516,7 +516,7 @@ DAMAGES.
           <input value=""  class="validate[required, length[1,100]] text-input" type="text" name="org"  id="org" />
         </label>
         <label> <span>Email address : </span>
-          <input value=""  class="validate[required,custom[email]] text-input" type="text" name="email" id="email"  />
+          <input value=""  class="validate[optional] text-input" type="text" name="email" id="email"  />
         </label>
         
       </fieldset>
